err/venom.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aniso8601'...
Listing './lib/python3.5/site-packages/aniso8601-2.0.0.egg-info'...
Listing './lib/python3.5/site-packages/blinker'...
Listing './lib/python3.5/site-packages/blinker-1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/venom'...
Listing './lib/python3.5/site-packages/venom/common'...
Compiling './lib/python3.5/site-packages/venom/common/messages.py'...
***   File "./lib/python3.5/site-packages/venom/common/messages.py", line 96
    paths: Repeat[str]
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/venom/converter.py'...
***   File "./lib/python3.5/site-packages/venom/converter.py", line 14
    wire: Type[T]
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/venom/fields.py'...
***   File "./lib/python3.5/site-packages/venom/fields.py", line 15
    _type: Union[Type[_VT], str]
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/venom/message.py'...
***   File "./lib/python3.5/site-packages/venom/message.py", line 59
    __fields__: ClassVar[Dict[str, FieldDescriptor]] = None
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/venom/protocol'...
Compiling './lib/python3.5/site-packages/venom/protocol/__init__.py'...
***   File "./lib/python3.5/site-packages/venom/protocol/__init__.py", line 42
    raise ValidationError(f"Invalid JSONProtocol: {str(e)}")
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/venom/protocol/protocol.py'...
***   File "./lib/python3.5/site-packages/venom/protocol/protocol.py", line 11
    mime: ClassVar[str] = None
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/venom/protocol/transcode.py'...
***   File "./lib/python3.5/site-packages/venom/protocol/transcode.py", line 22
    _instance_cache: ClassVar[Dict[Tuple[Type['venom.protocol.Protocol'], Type[Message]], 'MessageTranscoder']] = {}
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/venom/rpc'...
Compiling './lib/python3.5/site-packages/venom/rpc/__init__.py'...
***   File "./lib/python3.5/site-packages/venom/rpc/__init__.py", line 22
    on_add_service: ClassVar[Signal] = Signal('add-service')
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/venom/rpc/comms'...
Compiling './lib/python3.5/site-packages/venom/rpc/comms/__init__.py'...
***   File "./lib/python3.5/site-packages/venom/rpc/comms/__init__.py", line 28
    client_method_cls: ClassVar[Type['ClientMethod']] = ClientMethod
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/venom/rpc/comms/aiohttp.py'...
***   File "./lib/python3.5/site-packages/venom/rpc/comms/aiohttp.py", line 56
    return f'{field.json_name}:\d+'
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/venom/rpc/context.py'...
***   File "./lib/python3.5/site-packages/venom/rpc/context.py", line 10
    __contexts: MutableMapping[asyncio.Task, 'RequestContext'] = WeakKeyDictionary()
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/venom/rpc/inspection.py'...
***   File "./lib/python3.5/site-packages/venom/rpc/inspection.py", line 115
    raise RuntimeError(f"At least one argument expected in {func}")
                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/venom/rpc/method.py'...
***   File "./lib/python3.5/site-packages/venom/rpc/method.py", line 100
    http_path = f"./{name.lower().replace('_', '-')}"
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/venom/rpc/reflect'...
Compiling './lib/python3.5/site-packages/venom/rpc/reflect/openapi.py'...
***   File "./lib/python3.5/site-packages/venom/rpc/reflect/openapi.py", line 53
    raise NotImplementedError(f'Unsupported transcoder for reflection {transcoder} on {message}')
                                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/venom/rpc/reflect/reflect.py'...
***   File "./lib/python3.5/site-packages/venom/rpc/reflect/reflect.py", line 11
    services: Set[Service]
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/venom/rpc/reflect/stubs.py'...
***   File "./lib/python3.5/site-packages/venom/rpc/reflect/stubs.py", line 8
    type: str  # TODO: enum
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/venom/rpc/resolver.py'...
***   File "./lib/python3.5/site-packages/venom/rpc/resolver.py", line 9
    python: Type[T] = None
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/venom/rpc/service.py'...
***   File "./lib/python3.5/site-packages/venom/rpc/service.py", line 28
    meta.http_path = f"/{meta.name.lower().replace('_', '-')}"
                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/venom/rpc/test_utils'...
Listing './lib/python3.5/site-packages/venom/validation'...
Compiling './lib/python3.5/site-packages/venom/validation/schema.py'...
***   File "./lib/python3.5/site-packages/venom/validation/schema.py", line 9
    __python_type_schemas: ClassVar[Mapping[type, 'Schema']] = {}
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/venom-1.0.0a6.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
